Opened 12 years ago
Closed 10 years ago
#9610 closed bug (fixed)
Folders on desktop don't have the "directory up" button in Tracker
Reported by: | waddlesplash | Owned by: | waddlesplash |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Tracker | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
- Enable navigator interface in Tracker preferences
- Create a folder on the desktop
- Double-click to open in a Tracker window
- The "up" button is disabled.
You can also open by opening your Home directory, double-clicking Desktop, then double-clicking the folder. The up button will be disabled, the back button will not be.
Change History (5)
comment:1 by , 12 years ago
comment:2 by , 12 years ago
I am talking about a subfolder of the desktop (e.g. "~/Desktop/someFolder"). Double-clicking on a subfolder of the desktop opens a Tracker window, and the up button is disabled.
But why hide it from users? Windows, Linux, and other OSes don't hide the desktop from being opened in a file manager window. It's quite useful actually - then you can view by list, etc.
But no, I didn't change any settings. Double clicking "Home" shows me "Desktop" as one of the subfolders, and from there I can hit "up". I only can't in a subfolder of the desktop.
comment:3 by , 11 years ago
Priority: | high → normal |
---|
comment:4 by , 10 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
That is by intention: the Desktop is not supposed to be opened in a window. The Desktop folder is hidden by default, too, so you must have change that manually in order to see it in that window, did you?