Tracker: allow opening the desktop as a window in navigator mode.

Fixes #9610.