src/kits/tracker/Navigator.cpp
@@ -189,8 +189,7 @@ BNavigator::GoUp(bool option)
 	BEntry entry;
 	if (entry.SetTo(fPath.Path()) == B_OK) {
 		BEntry parentEntry;
-		if (entry.GetParent(&parentEntry) == B_OK
-			&& !FSIsDeskDir(&parentEntry)) {
+		if (entry.GetParent(&parentEntry) == B_OK) {
 			SendNavigationMessage(kActionUp, &parentEntry, option);
 		}
 	}
@@ -266,7 +265,6 @@ BNavigator::GoTo()
 	entry_ref ref;
 
 	if (entry.SetTo(pathname.String()) == B_OK
-		&& !FSIsDeskDir(&entry)
 		&& entry.GetRef(&ref) == B_OK) {
 		BMessage message(kSwitchDirectory);
 		message.AddRef("refs", &ref);
@@ -317,8 +315,7 @@ BNavigator::UpdateLocation(const Model* newmodel, int32 action)
 	BEntry entry;
 	if (entry.SetTo(fPath.Path()) == B_OK) {
 		BEntry parentEntry;
-		bool enable = entry.GetParent(&parentEntry) == B_OK
-			&& !FSIsDeskDir(&parentEntry);
+		bool enable = entry.GetParent(&parentEntry) == B_OK;
 		SetActionEnabled(kNavigatorCommandUp, enable);
 	}
 
